Scrollbar fix

--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,8 @@ body {
 
 html {
     font-size: 16px;
+    overflow: hidden;
+    max-height: 100%;
 }
 
 body {
